// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: BUSL-1.1

syntax = "proto3";

package hashicorp.consul.mesh.v1alpha1.pbproxystate;

import "pbresource/resource.proto";

message LeafCertificateRef {
  string name = 1;
  string namespace = 2;
  string partition = 3;
  string host = 4;
  string datacenter = 5;
  repeated string dns_san = 6;
}

message TrustBundleRef {
  string peer = 1;
  string trust_domain = 2;
}

message EndpointRef {
  // id is the ServiceEndpoints resource id.
  hashicorp.consul.resource.ID id = 1;
  // port is the name of the port in the ServiceEndpoints to generate the Endpoints from.
  string port = 2;
}
